--- a/Practice Project1/index.html
+++ b/Practice Project1/index.html
@@ -32,19 +32,24 @@
         <div class="stroke stroke16"></div>
         <div class="stroke stroke17"></div>
         <div class="stroke stroke18"></div>
+
         <div class="icon">
-            <i class="fas fa-times"></i>
-            <i class="fas fa-times"></i>
-            <i class="fas fa-times"></i>
-            <i class="fas fa-times"></i>
-            <i class="fas fa-times"></i>
-            <i class="fas fa-times"></i>
-            <i class="fas fa-times"></i>
-            <i class="fas fa-times"></i>
-            <i class="fas fa-times"></i>
-            <i class="fas fa-times"></i>
-            <i class="fas fa-times"></i>
-            <i class="fas fa-times"></i>
+            <div class="icon1">
+                <i class="fas fa-times"></i>
+                <i class="fas fa-times"></i>
+                <i class="fas fa-times"></i>
+                <i class="fas fa-times"></i>
+                <i class="fas fa-times"></i>
+                <i class="fas fa-times"></i>
+            </div>
+            <div class="icon2">
+                <i class="fas fa-times"></i>
+                <i class="fas fa-times"></i>
+                <i class="fas fa-times"></i>
+                <i class="fas fa-times"></i>
+                <i class="fas fa-times"></i>
+                <i class="fas fa-times"></i>
+            </div>
         </div>
         <div id="heading">
             Portfolio
@@ -56,6 +61,7 @@
         </div>
     </div>
 
+    
     <div id="box-2">
         <div class="container1">
             <div class="buttons">
@@ -82,18 +88,24 @@
 
         </div>
         <div class="icon-2">
-            <i class="fas fa-times"></i>
-            <i class="fas fa-times"></i>
-            <i class="fas fa-times"></i>
-            <i class="fas fa-times"></i>
-            <i class="fas fa-times"></i>
-            <i class="fas fa-times"></i>
-            <i class="fas fa-times"></i>
-            <i class="fas fa-times"></i>
-            <i class="fas fa-times"></i>
-            <i class="fas fa-times"></i>
-            <i class="fas fa-times"></i>
-            <i class="fas fa-times"></i>
+            <div class="icon-3">
+
+                <i class="fas fa-times"></i>
+                <i class="fas fa-times"></i>
+                <i class="fas fa-times"></i>
+                <i class="fas fa-times"></i>
+                <i class="fas fa-times"></i>
+                <i class="fas fa-times"></i>
+            </div>
+            <div class="icon-4">
+                <i class="fas fa-times"></i>
+                <i class="fas fa-times"></i>
+                <i class="fas fa-times"></i>
+                <i class="fas fa-times"></i>
+                <i class="fas fa-times"></i>
+                <i class="fas fa-times"></i>
+            </div>
+           
         </div>
     </div>
 </body>
