--- a/Portfolio website/index.html
+++ b/Portfolio website/index.html
@@ -11,12 +11,13 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+    <link href="./output.css" rel="stylesheet">
     <title>Portfolio web</title>
   </head>
   <body>
     <div class="container">
       <!-- navbar starts here -->
-      <nav>
+      <nav >
         <div class="logo">
           <div id="star"></div>
           <p>Wariha Khan</p>
@@ -170,5 +171,6 @@
       <!--let's connect section ends-->
     </div>
     <!-- this is the closing tag of main container -->
+    
   </body>
 </html>
